force-app/main/default/objects/Survey_Score__c/Survey_Score__c.object-meta.xml
<CustomObject>
    <description>NPS Survey 응답결과를 기반으로 날짜별, 에이전트별 점수를 집계한 데이터</description>
    <label>Survey Score</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Survey Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>