force-app/main/default/objects/Survey_Score__c/fields/Bot_Count__c.field-meta.xml
<CustomField>
    <fullName>Bot_Count__c</fullName>
    <description>0~6점 응답자 수</description>
    <inlineHelpText>0~6점 응답자 수</inlineHelpText>
    <label>Bot Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>