force-app/main/default/objects/Survey_Score__c/fields/Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>Calc_Date__c</fullName>
    <description>집계 기준 일자</description>
    <inlineHelpText>집계 기준 일자</inlineHelpText>
    <label>Calc Date</label>
    <type>Date</type>
</CustomField>