force-app/main/default/objects/Survey_Score__c/fields/Calc_Score__c.field-meta.xml
<CustomField>
    <fullName>Calc_Score__c</fullName>
    <description>계산된 스코어</description>
    <label>Calc Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>