force-app/main/default/objects/Survey_Score__c/fields/Mid_Count__c.field-meta.xml
<CustomField>
    <fullName>Mid_Count__c</fullName>
    <description>6~7점 응답자 수</description>
    <inlineHelpText>6~7점 응답자 수</inlineHelpText>
    <label>Mid Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>