force-app/main/default/objects/Survey_Score__c/fields/Top_Count__c.field-meta.xml
<CustomField>
    <fullName>Top_Count__c</fullName>
    <description>9~10점 응답자 수</description>
    <inlineHelpText>9~10점 응답자 수</inlineHelpText>
    <label>Top Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>