force-app/main/default/objects/Survey_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Calc_Date__c</columns>
    <columns>User__c</columns>
    <columns>NAME</columns>
    <columns>Question_Type__c</columns>
    <columns>Calc_Score__c</columns>
    <columns>Survey__c</columns>
    <columns>Survey_Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>